--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>JMG Tecnicos Aduanales</title>
 <meta charset="utf-8">
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet">
 <script src="js/jquery-1.8.3.min.js"></script>
 <script src="css/5grid/init.js?use=mobile,desktop,1000px"></script>
 <script src="js/init.js"></script>
@@ -42,8 +42,8 @@
         <header>
           <h1><strong><img src="images/logojmg.png" width="120" height="89" alt="jmg"></strong>. Tecnicos Aduanales</h1>
         </header>
-        <p>Somos una <strong>Empresa </strong> dedicada a los trámites de importación y exportación en Cd Hidalgo Chiapas.</p>
-        <a href="#work" class="button button-big">Vea Nuestros Servcios</a> </div>
+        <p>Somos una <strong>Empresa </strong> dedicada a los trámites de importación y exportación en Ciudad Hidalgo, Chiapas.</p>
+        <a href="#work" class="button button-big">Vea Nuestros Servicios</a></div>
     </div>
   </article>
 </div>
@@ -56,8 +56,8 @@
       <div class="row">
         <div class="4u">
           <section class="box box-style1"> <span class="image image-centered"><img src="images/work01.png" alt=""></span>
-            <h3>Tramites Aduanales</h3>
-            <p>Al contratar nuestos servicios, nosotros nos encargamos  de realizar todos los tramites de importación y exportación</p>
+            <h3>Trámites Aduanales</h3>
+            <p>Al contratar nuestos servicios, nosotros nos encargamos  de realizar todos los trámites de importación y exportación</p>
           </section>
         </div>
         <div class="4u">
@@ -75,15 +75,15 @@
       </div>
     </div>
     <footer>
-      <p>Te gustaria conocer nuestas instalaciones?</p>
-      <a href="#portfolio" class="button button-big">Aqui puede ver nuestas instalaciones </a> </footer>
+      <p>¿Te gustaría conocer nuestas instalaciones?</p>
+      <a href="#portfolio" class="button button-big">Aqui puede ver nuestas instalaciones</a> </footer>
   </article>
 </div>
 <div class="wrapper wrapper-style3">
   <article id="portfolio">
     <header>
       <h2>Estas son nuestras Bodegas</h2>
-      <span>Contamos con 3 bodegas de mas de 2100 Mts Cuadrados Techados y mas de 7000 Mts para maniobras</span> </header>
+      <span>Contamos con 3 bodegas de mas de 2100 m2 Techados y mas de 7000 m2 para maniobras</span> </header>
     <div class="5grid-layout">
       <div class="row">
         <div class="12u"> </div>
@@ -130,14 +130,14 @@
       </div>
     </div>
     <footer>
-      <p>Te gustaria que te asesoremos en tus importaciones o exportacione?</p>
-      <a href="#contact" class="button button-big">Contactanos</a> </footer>
+      <p>¿Te gustaría que te asesoremos en tus importaciones o exportaciones?</p>
+      <a href="#contact" class="button button-big">Contáctanos</a> </footer>
   </article>
 </div>
 <div class="wrapper wrapper-style4">
   <article id="contact">
     <header>
-      <h2>Contactanos</h2>
+      <h2>Contáctanos</h2>
       <p><span class="12u">Teléfonos:</br>
 01 55 +962 69 805 11</br>
 01 55 +962 69 805 12</br>
@@ -156,13 +156,13 @@
             <td width="211">Ext 805</td>
           </tr>
           <tr>
-            <td>Gte de Operaciones</td>
-            <td>Lic. Isabel  García S.</td>
+            <td>Gerente de Operaciones</td>
+            <td>Lic. Isabel García S.</td>
             <td>Ext 812</td>
           </tr>
           <tr>
-            <td>Tráfico y  Pedimentos</td>
-            <td>Lic. Viridiana  Escobar</td>
+            <td>Tráfico y Pedimentos</td>
+            <td>Lic. Viridiana Escobar</td>
             <td>Ext 809</td>
           </tr>
           <tr>
@@ -175,7 +175,7 @@
       </div>
     </div>
     <footer>
-      <p id="copyright"> &copy; 2014 Derechos Reservados | JMG Tecnicos Aduanales<a href="http://iconify.it"></a> | Diseño: <a href="http://www.compuchiapas.com/">Computel de Chiapas</a> </p>
+      <p id="copyright">&copy; 2014 Derechos Reservados | JMG Tecnicos Aduanales | Diseño: <a href="https://nubenautas.com/">Nubenautas</a></p>
     </footer>
   </article>
 </div>
